# VelocityVortex

./: .gitignore  CMakeLists.txt  README.md  TECHNICAL.md  build.sh
MindLauncher/: imgui.ini  pom.xml
MindLauncher/src/main/java/: module-info.java
MindLauncher/src/main/java/org/example/mindlauncher/: Main.java
MindLauncher/src/main/java/org/example/mindlauncher/controls/: AnkrController.java  GameController.java  VortexController.java
MindLauncher/src/main/resources/org/example/mindlauncher/style/: main-style.css
MindLauncher/src/main/resources/org/example/mindlauncher/views/: ankr-view.fxml  main-view.fxml  vortex-view.fxml
VelocityVortex/: CMakeLists.txt  main.cpp
VelocityVortex/Assets/map/: vortex-map.json
VelocityVortex/MindEngine/Assert/: assert.hpp
VelocityVortex/MindEngine/Assets/audios/: audios.cpp  audios.hpp
VelocityVortex/MindEngine/Assets/images/: images.cpp  images.hpp
VelocityVortex/MindEngine/Core/input/: input.cpp  input.hpp
VelocityVortex/MindEngine/Core/physic/: physic.cpp  physic.hpp
VelocityVortex/MindEngine/Game/entity/: entity.hpp  structs.hpp
VelocityVortex/MindEngine/Game/game/: game.cpp  game.hpp
VelocityVortex/MindEngine/Game/map/: map.cpp  map.hpp
include/: Car.h  Game.h
src/: Car.cpp  Game.cpp
